# ros2_learning

./: cmds_ros  ros2_ws_py.code-workspace  rover.code-workspace  rover_proto_A1.urdf  warehouse_rover.code-workspace
install/: local_setup.sh  setup.bash  setup.sh
install/rover/share/rover/: package.sh  package.xml
install/rover/share/rover/urdf/: rover.urdf
log/: latest_build
px4_ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
px4_ros2_ws/log/: latest_build
ros2_workspace/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_workspace/install/prius_line_following/lib/prius_line_following/: prius_line_follower
ros2_workspace/install/prius_line_following/share/prius_line_following/: package.sh
ros2_workspace/install/rover/lib/rover/: follow_wall  obstacle_avoidance
ros2_workspace/install/rover/share/rover/: package.sh
ros2_workspace/log/: latest_build
ros2_workspace/src/prius_line_following/: package.xml  setup.py
ros2_workspace/src/prius_line_following/launch/: car_on_track.launch.py  rviz.launch.py
ros2_workspace/src/prius_line_following/log/: latest_list
ros2_workspace/src/prius_line_following/prius_line_following/: line_following.py
ros2_workspace/src/prius_line_following/urdf/prius_hybrid/: model.sdf
ros2_workspace/src/prius_line_following/urdf/road/: model.sdf
ros2_workspace/src/rover/: setup.py
ros2_workspace/src/rover/launch/: 1_rviz.launch.py  2_gazebo.launch.py
ros2_workspace/src/rover/urdf/: rover.urdf
ros2_workspace/src/rover/worlds/: blocks.sdf
ros2_ws_cpp/backup/: autonomous_driving.cpp  rover_proto_A1.sdf  rover_proto_A1_works_on_gazebo.urdf  rover_proto_A1_works_on_rviz.urdf
ros2_ws_cpp/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
ros2_ws_cpp/install/warehouse_rover_ros2/share/warehouse_rover_ros2/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws_cpp/install/warehouse_rover_ros2/share/warehouse_rover_ros2/launch/: gazebo.launch.py  rviz.launch.py
ros2_ws_cpp/install/warehouse_rover_ros2/share/warehouse_rover_ros2/urdf/: config.rviz  rover_proto_A1.urdf
ros2_ws_cpp/install/warehouse_rover_ros2/share/warehouse_rover_ros2/urdf/rover_proto_A1/: rover_proto_A1.urdf
ros2_ws_cpp/install/warehouse_rover_ros2/share/warehouse_rover_ros2/urdf/track_1/: model.sdf
ros2_ws_cpp/install/warehouse_rover_ros2/share/warehouse_rover_ros2/urdf/track_1/materials/scripts/: track_1.material
ros2_ws_cpp/install/warehouse_rover_ros2/share/warehouse_rover_ros2/worlds/: track_1.world
ros2_ws_cpp/log/: latest_build  latest_list
ros2_ws_cpp/src/cpp_pubsub/: package.xml
ros2_ws_cpp/src/rover_cpp/: CMakeLists.txt  package.xml  rover_cpp.code-workspace
ros2_ws_cpp/src/rover_cpp/launch/: 1_rviz.launch.py  2_gazebo.launch.py
ros2_ws_cpp/src/rover_cpp/log/: latest_list
ros2_ws_cpp/src/rover_cpp/src/: follow_path_cpp.cpp  linear_velocity_publisher.cpp  obs_avoidance_cpp.cpp
ros2_ws_cpp/src/rover_cpp/urdf/: config.rviz  rover_cpp.urdf
ros2_ws_cpp/src/rover_cpp/worlds/: blocks.sdf
ros2_ws_cpp/src/warehouse_rover_py/: package.xml  setup.cfg  setup.py
ros2_ws_cpp/src/warehouse_rover_ros2/: CMakeLists.txt  package.xml
ros2_ws_cpp/src/warehouse_rover_ros2/launch/: gazebo.launch.py
ros2_ws_cpp/src/warehouse_rover_ros2/log/: latest_list
ros2_ws_cpp/src/warehouse_rover_ros2/src/: autonomous_driving.cpp  video_save.cpp
(+36 files in other folders)
